tweak additional images for spacing
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@925 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5387,7 +5387,8 @@ body {
         border-radius: 5px;
         margin: 0 5px 5px 0;
         display: inline-block;
-        background: #7a9945; }
+        background: #7a9945;
+        padding: 6px 8px; }
       .panels-display .panel-description .additional-images a:hover,
       .panels-display .panel-description p.external-link a:hover {
         background: #1faac0; }
