--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -732,6 +732,7 @@ body {
 				margin: 0 5px 5px 0;
 				display: inline-block;
 				background: $green;
+				padding: 6px 8px;
 			}
 			a:hover { background: $blue; }
 		} 
