tweak additional images for spacing
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@926 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -733,8 +733,13 @@ body {
 				display: inline-block;
 				background: $green;
 				padding: 6px 8px;
+				color: white;
+				font-size: 18px;
 			}
-			a:hover { background: $blue; }
+			a:hover { 
+				background: $blue;
+				color: white;
+				text-decoration: none; }
 		} 
 		
 		/*h5.work-type p.work-type {
