--- a/css/panels.css
+++ b/css/panels.css
@@ -5388,10 +5388,14 @@ body {
         margin: 0 5px 5px 0;
         display: inline-block;
         background: #7a9945;
-        padding: 6px 8px; }
+        padding: 6px 8px;
+        color: white;
+        font-size: 18px; }
       .panels-display .panel-description .additional-images a:hover,
       .panels-display .panel-description p.external-link a:hover {
-        background: #1faac0; }
+        background: #1faac0;
+        color: white;
+        text-decoration: none; }
   .panels-display nav {
     position: absolute;
     top: 0;
