increase line-height for metadata
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@927 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -719,6 +719,7 @@ body {
 			-o-border-radius: 5px;
 			border-radius: 5px;
 			margin-bottom: 10px;
+			line-height: 1.3em;
 		}
 
 		.additional-images,
