--- a/css/panels.css
+++ b/css/panels.css
@@ -5375,7 +5375,8 @@ body {
       -webkit-border-radius: 5px;
       -o-border-radius: 5px;
       border-radius: 5px;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      line-height: 1.3em; }
     .panels-display .panel-description .additional-images,
     .panels-display .panel-description p.external-link {
       padding: 0 20px; }
