add temp note styles before deleting full title from metadata display
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@928 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5397,6 +5397,9 @@ body {
         background: #1faac0;
         color: white;
         text-decoration: none; }
+    .panels-display .panel-description .note {
+      margin: 30px 20px;
+      color: #ccc; }
   .panels-display nav {
     position: absolute;
     top: 0;
