--- a/css/panels.css
+++ b/css/panels.css
@@ -5376,7 +5376,8 @@ body {
       -o-border-radius: 5px;
       border-radius: 5px;
       margin-bottom: 10px;
-      line-height: 1.3em; }
+      line-height: 1.3em;
+      font-size: 1em; }
     .panels-display .panel-description .additional-images,
     .panels-display .panel-description p.external-link {
       padding: 0 20px; }
