--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -720,6 +720,7 @@ body {
 			border-radius: 5px;
 			margin-bottom: 10px;
 			line-height: 1.3em;
+			font-size: 1em;
 		}
 
 		.additional-images,
