change opacity for modal window so contextual image can be compared with original
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@932 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -935,6 +935,12 @@ body {
 
 /* Additional image modal - Bootstrap overrides */
 
+.modal-backdrop,
+.modal-backdrop.fade.in { 
+	opacity: 0;
+	filter: alpha(opacity=80);
+}
+
 .addl-img-modal {
 	-webkit-border-radius: 0;
 	-mox-border-radius: 0;
