--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -935,11 +935,11 @@ body {
 
 /* Additional image modal - Bootstrap overrides */
 
-// .modal-backdrop,
-// .modal-backdrop.fade.in { 
-// 	opacity: 0;
-// 	filter: alpha(opacity=80);
-// }
+.modal-backdrop,
+.modal-backdrop.fade.in { 
+	opacity: .2;
+	filter: alpha(opacity=20);
+}
 
 .addl-img-modal {
 	-webkit-border-radius: 0;
