--- a/css/panels.css
+++ b/css/panels.css
@@ -5582,6 +5582,11 @@ body {
   opacity: 1; }
 
 /* Additional image modal - Bootstrap overrides */
+.modal-backdrop,
+.modal-backdrop.fade.in {
+  opacity: .2;
+  filter: alpha(opacity=20); }
+
 .addl-img-modal {
   -webkit-border-radius: 0;
   -mox-border-radius: 0;
