change modal window cursor to draggable (move)
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@936 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5617,6 +5617,9 @@ body {
   font-size: 40px;
   color: white; }
 
+#additionalImage a {
+  cursor: move; }
+
 /*
 .search-panels {
 	background-position: 0 0;
