clean up modal window border radius
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@938 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -942,9 +942,11 @@ body {
 }
 
 .addl-img-modal {
-	-webkit-border-radius: 0;
-	-mox-border-radius: 0;
-	border-radius: 0;
+	a {
+		cursor: move;
+		-webkit-border-radius: 0;
+		-mox-border-radius: 0;
+		border-radius: 0; }
 }
 .close {
 	float: none;
@@ -971,11 +973,6 @@ body {
 	font-size: 40px;
 	color: $white;
 }
-
-#additionalImage {
-	a { cursor: move; }
-}
-
 
 /*
 .search-panels {
