--- a/css/panels.css
+++ b/css/panels.css
@@ -5587,7 +5587,8 @@ body {
   opacity: .1;
   filter: alpha(opacity=10); }
 
-.addl-img-modal {
+.addl-img-modal a {
+  cursor: move;
   -webkit-border-radius: 0;
   -mox-border-radius: 0;
   border-radius: 0; }
@@ -5616,9 +5617,6 @@ body {
   background: #1faac0;
   font-size: 40px;
   color: white; }
-
-#additionalImage a {
-  cursor: move; }
 
 /*
 .search-panels {
