--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -941,13 +941,7 @@ body {
 	filter: alpha(opacity=10);
 }
 
-.addl-img-modal {
-	a {
-		cursor: move;
-		-webkit-border-radius: 0;
-		-mox-border-radius: 0;
-		border-radius: 0; }
-}
+
 .close {
 	float: none;
 	text-shadow: 0 0 0 black;
@@ -972,6 +966,20 @@ body {
 	background: $blue;
 	font-size: 40px;
 	color: $white;
+}
+
+.panels-display {
+	.panel-description {
+		.additional-images {
+			.addl-img-modal {
+				a {
+					cursor: move;
+					-webkit-border-radius: 0;
+					-moz-border-radius: 0;
+					border-radius: 0; }
+			}
+		}
+	}
 }
 
 /*
