--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -972,6 +972,11 @@ body {
 	.panel-description {
 		.additional-images {
 			.addl-img-modal {
+				-webkit-border-radius: 0;
+				-moz-border-radius: 0;
+				border-radius: 0;
+				text-align: center;
+				padding: 5px;
 				a {
 					cursor: move;
 					-webkit-border-radius: 0;
