further modal refinement
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@941 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -976,12 +976,12 @@ body {
 				-moz-border-radius: 0;
 				border-radius: 0;
 				text-align: center;
-				padding: 5px;
 				a {
 					cursor: move;
 					-webkit-border-radius: 0;
 					-moz-border-radius: 0;
 					border-radius: 0; }
+				a.close { cursor: pointer; }
 			}
 		}
 	}
