--- a/css/panels.css
+++ b/css/panels.css
@@ -5616,13 +5616,14 @@ body {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  text-align: center;
-  padding: 5px; }
+  text-align: center; }
   .panels-display .panel-description .additional-images .addl-img-modal a {
     cursor: move;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0; }
+  .panels-display .panel-description .additional-images .addl-img-modal a.close {
+    cursor: pointer; }
 
 /*
 .search-panels {
