--- a/css/panels.css
+++ b/css/panels.css
@@ -5616,14 +5616,18 @@ body {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  text-align: center; }
+  text-align: center;
+  max-width: 500px;
+  max-height: 600px; }
   .panels-display .panel-description .additional-images .addl-img-modal a {
     cursor: move;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
-    border-radius: 0; }
+    border-radius: 0;
+    margin: 0; }
   .panels-display .panel-description .additional-images .addl-img-modal a.close {
-    cursor: pointer; }
+    cursor: pointer;
+    margin: 0; }
 
 /*
 .search-panels {
