--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -976,12 +976,17 @@ body {
 				-moz-border-radius: 0;
 				border-radius: 0;
 				text-align: center;
+				max-width: 500px;
+				max-height: 600px;
 				a {
 					cursor: move;
 					-webkit-border-radius: 0;
 					-moz-border-radius: 0;
-					border-radius: 0; }
-				a.close { cursor: pointer; }
+					border-radius: 0;
+					margin: 0; }
+				a.close { 
+					cursor: pointer;
+					margin: 0; }
 			}
 		}
 	}
