--- a/css/panels.css
+++ b/css/panels.css
@@ -5617,8 +5617,7 @@ body {
   -moz-border-radius: 0;
   border-radius: 0;
   text-align: center;
-  max-width: 500px;
-  max-height: 600px; }
+  max-width: 600px; }
   .panels-display .panel-description .additional-images .addl-img-modal a {
     cursor: move;
     -webkit-border-radius: 0;
