further modal refinement
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@944 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -976,7 +976,10 @@ body {
 				-moz-border-radius: 0;
 				border-radius: 0;
 				text-align: center;
-				max-width: 600px;
+				img {
+					max-width: 600px;
+					max-height: 800px;
+				}
 				a {
 					cursor: move;
 					-webkit-border-radius: 0;
