--- a/css/panels.css
+++ b/css/panels.css
@@ -5616,8 +5616,10 @@ body {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  text-align: center;
-  max-width: 600px; }
+  text-align: center; }
+  .panels-display .panel-description .additional-images .addl-img-modal img {
+    max-width: 600px;
+    max-height: 800px; }
   .panels-display .panel-description .additional-images .addl-img-modal a {
     cursor: move;
     -webkit-border-radius: 0;
