further modal refinement
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@945 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5616,7 +5616,8 @@ body {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  text-align: center; }
+  text-align: center;
+  width: auto; }
   .panels-display .panel-description .additional-images .addl-img-modal img {
     max-width: 600px;
     max-height: 800px; }
