--- a/css/panels.css
+++ b/css/panels.css
@@ -5617,10 +5617,7 @@ body {
   -moz-border-radius: 0;
   border-radius: 0;
   text-align: center;
-  width: auto; }
-  .panels-display .panel-description .additional-images .addl-img-modal img {
-    max-width: 600px;
-    max-height: 800px; }
+  max-width: 560px; }
   .panels-display .panel-description .additional-images .addl-img-modal a {
     cursor: move;
     -webkit-border-radius: 0;
