--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -20,12 +20,12 @@
 			padding-left: 10%;
 			h2 {
 				width: 430px;
-				font-size: 2.7em;
+				// font-size: 2.7em;
 				padding: 20px;
 				margin: 0; }
 			p {
 				width: 450px;
-				font-size: 1.3em;
+				// font-size: 1.3em;
 				padding: 20px;
 				margin: 0; }
 			ul {
@@ -33,11 +33,11 @@
 		}
 	}
 	.btn-pathway {
-		font-size: 1.7em;
+		// font-size: 1.7em;
 		padding: 8px;
 		padding-left: 40px; }
 	.btn-panels {
-		font-size: 1.64em;
+		// font-size: 1.64em;
 		padding: 5px;
 		margin-left: 3px;
 		padding-left: 30px; }	
@@ -52,7 +52,7 @@
 		.home-content {
 			h2 {
 				width: 320px;
-				font-size: 2.6em;
+				// font-size: 2.6em;
 				padding: 10px;
 				margin: 0; }
 			p {
