comment out font sizes for responsive hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@951 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6458,6 +6458,9 @@ p.caption {
   .hero .home-content {
     padding-left: 10%; } }
 @media (max-width: 1147px) {
+  .hero .home-content h2 {
+    font-size: 2em; } }
+@media (max-width: 1147px) {
   .hero .home-content {
     padding-left: 15%;
     padding-top: 50px; }
