tweak font sizes for responsive hero
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@953 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -12,6 +12,10 @@
 	}
 }
 
+@media (max-width: 1169px) {
+	.btn-pathway { font-size: 1.8em; }
+}
+
 @media (max-width: 1147px) {
 	.hero {
 		.home-content { 
