--- a/css/content.css
+++ b/css/content.css
@@ -6460,6 +6460,9 @@ p.caption {
 @media (max-width: 1292px) {
   .hero .home-content h2 {
     font-size: 2em; } }
+@media (max-width: 1169px) {
+  .btn-pathway {
+    font-size: 1.8em; } }
 @media (max-width: 1147px) {
   .hero .home-content {
     padding-left: 15%;
