responsive hero modifications
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@955 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -23,6 +23,8 @@
 			p { width: 550px; }
 		}
 	}
+	.btn-pathway { font-size: 1.6em; }
+	.btn-panels { font-size: 1.4em; }
 }
 
 @media screen and (max-width: 983px) {
