--- a/css/content.css
+++ b/css/content.css
@@ -6467,7 +6467,13 @@ p.caption {
   .hero .home-content {
     padding-top: 50px; }
     .hero .home-content p {
-      width: 550px; } }
+      width: 550px; }
+
+  .btn-pathway {
+    font-size: 1.6em; }
+
+  .btn-panels {
+    font-size: 1.4em; } }
 @media screen and (max-width: 983px) {
   .hero .home-content {
     padding-left: 10%; }
