--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -20,7 +20,10 @@
 	.hero {
 		.home-content { 
 			padding-top: 50px;
-			p { width: 550px; }
+			h2 { font-size: 1.8em; }
+			p { 
+				font-size: 1.2em;
+				width: 550px; }
 		}
 	}
 	.btn-pathway { font-size: 1.6em; }
