--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -16,10 +16,17 @@
 	.btn-pathway { font-size: 1.8em; }
 }
 
+@media (max-width: 1157px) {
+	.hero {
+		.home-content { 
+			h2 { font-size: 1.75em; }
+		}
+	}
+}
+
 @media (max-width: 1147px) {
 	.hero {
 		.home-content { 
-			h2 { font-size: 1.8em; }
 			p { 
 				font-size: 1.2em;
 				width: 550px; }
@@ -28,6 +35,16 @@
 	.btn-pathway { font-size: 1.6em; }
 	.btn-panels { font-size: 1.4em; }
 }
+
+@media (max-width: 1103px) {
+	.hero {
+		.home-content { 
+			p { 
+				width: 500px; }
+		}
+	}
+}
+
 
 @media screen and (max-width: 983px) {
 	.hero{
