--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -45,6 +45,17 @@
 	}
 }
 
+@media (max-width: 1023px) {
+	.hero {
+		.home-content { 
+			padding-left: 5%;
+			h2 { font-size: 1.5em; }
+		}
+	}
+	.btn-pathway { font-size: 1.2em; }
+	.btn-panels { font-size: 1.1em; }
+}
+
 
 @media screen and (max-width: 983px) {
 	.hero{
