responsive hero modifications
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@960 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -62,12 +62,12 @@
 		.home-content { 
 			padding-left: 10%;
 			h2 {
-				width: 430px;
+				width: 80%;
 				// font-size: 2.7em;
 				padding: 20px;
 				margin: 0; }
 			p {
-				width: 450px;
+				width: 420px;
 				// font-size: 1.3em;
 				padding: 20px;
 				margin: 0; }
