--- a/css/content.css
+++ b/css/content.css
@@ -6494,11 +6494,11 @@ p.caption {
   .hero .home-content {
     padding-left: 10%; }
     .hero .home-content h2 {
-      width: 430px;
+      width: 80%;
       padding: 20px;
       margin: 0; }
     .hero .home-content p {
-      width: 450px;
+      width: 420px;
       padding: 20px;
       margin: 0; }
     .hero .home-content ul {
