responsive hero modifications
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@961 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6491,18 +6491,23 @@ p.caption {
   .btn-panels {
     font-size: 1.1em; } }
 @media screen and (max-width: 983px) {
-  .hero .home-content {
-    padding-left: 10%; }
-    .hero .home-content h2 {
-      width: 80%;
-      padding: 20px;
-      margin: 0; }
-    .hero .home-content p {
-      width: 420px;
-      padding: 20px;
-      margin: 0; }
-    .hero .home-content ul {
-      margin-top: 7px; }
+  .hero {
+    height: 450px; }
+    .hero .home-content {
+      padding-left: 10%; }
+      .hero .home-content h2 {
+        width: 80%;
+        padding: 20px;
+        margin: 0; }
+      .hero .home-content p {
+        width: 420px;
+        padding: 20px;
+        margin: 0; }
+      .hero .home-content ul {
+        margin-top: 7px; }
+
+  aside {
+    height: 453px; }
 
   .btn-pathway {
     padding: 8px;
@@ -6514,8 +6519,8 @@ p.caption {
     padding-left: 30px; }
 
   .book-cover {
-    margin-top: 22px;
-    max-width: 100%; } }
+    margin-top: 80px;
+    max-width: 50%; } }
 @media screen and (max-width: 866px) {
   .hero .home-content h2 {
     width: 320px;
