--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -59,6 +59,7 @@
 
 @media screen and (max-width: 983px) {
 	.hero{
+		height: 450px;
 		.home-content { 
 			padding-left: 10%;
 			h2 {
@@ -75,6 +76,7 @@
 				margin-top: 7px; }
 		}
 	}
+	aside { height: 453px; }
 	.btn-pathway {
 		// font-size: 1.7em;
 		padding: 8px;
@@ -85,8 +87,8 @@
 		margin-left: 3px;
 		padding-left: 30px; }	
 	.book-cover {
-		margin-top: 22px;
-		max-width: 100%;
+		margin-top: 80px;
+		max-width: 50%;
 	}
 }
 
