responsive hero modifications
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@964 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6527,6 +6527,9 @@ p.caption {
   .btn-panels {
     margin-left: 0;
     margin-top: 5px; } }
+@media (max-width: 1023px) {
+  .hero .home-content p {
+    width: 325px; } }
 @media screen and (max-width: 702px) {
   .hero {
     width: 100%; }
