less left margin on subnav menu
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@965 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5989,6 +5989,9 @@ img.pull-right {
       -moz-box-shadow: none;
       box-shadow: none; }
 
+.sidebar ul.menu {
+  margin-left: 5px; }
+
 /* Institution branding */
 /*------------------------------*/
 .institution-brand {
