--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -89,6 +89,10 @@
 	}
 }
 
+.sidebar {
+	ul.menu { margin-left: 5px; }
+}
+
 //.phonetic {
   //background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0 !important; 
 //}
