add responsive logo
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@966 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -5,7 +5,16 @@
 @media (max-width: 480px) {
 	.navbar {
 		.brand { margin-left: -15px; }
+		.logo {
+	  	  	a {
+	  		  	height: 70px;
+	  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
+	  		  	&:hover {
+	  		    	background: url('../images/mnemosyne-phonetics-logo-300.png') no-repeat 0 0; }
+	  		}
+	  	}
 	}
 	.featured-content-first { clear: both; }
+
 }
 
