--- a/css/content.css
+++ b/css/content.css
@@ -6454,6 +6454,11 @@ p.caption {
 @media (max-width: 480px) {
   .navbar .brand {
     margin-left: -15px; }
+  .navbar .logo a {
+    height: 70px;
+    background: url("../images/mnemosyne-logo-300.png") no-repeat 0 0; }
+    .navbar .logo a:hover {
+      background: url("../images/mnemosyne-phonetics-logo-300.png") no-repeat 0 0; }
 
   .featured-content-first {
     clear: both; } }
