--- a/css/content.css
+++ b/css/content.css
@@ -6455,6 +6455,7 @@ p.caption {
   .navbar .brand {
     margin-left: -15px; }
   .navbar .logo a {
+    width: 300px;
     height: 70px;
     background: url("../images/mnemosyne-logo-300.png") no-repeat 0 0; }
     .navbar .logo a:hover {
