--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -7,6 +7,7 @@
 		.brand { margin-left: -15px; }
 		.logo {
 	  	  	a {
+	  	  		width: 300px;
 	  		  	height: 70px;
 	  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
 	  		  	&:hover {
