--- a/css/content.css
+++ b/css/content.css
@@ -6454,11 +6454,11 @@ p.caption {
 @media (max-width: 480px) {
   .navbar .brand {
     margin-left: -15px; }
-  .navbar .logo a {
+  .navbar .logo h1 a {
     width: 300px;
     height: 70px;
     background: url("../images/mnemosyne-logo-300.png") no-repeat 0 0; }
-    .navbar .logo a:hover {
+    .navbar .logo h1 a:hover {
       background: url("../images/mnemosyne-phonetics-logo-300.png") no-repeat 0 0; }
 
   .featured-content-first {
