--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -6,13 +6,15 @@
 	.navbar {
 		.brand { margin-left: -15px; }
 		.logo {
-	  	  	a {
-	  	  		width: 300px;
-	  		  	height: 70px;
-	  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
-	  		  	&:hover {
-	  		    	background: url('../images/mnemosyne-phonetics-logo-300.png') no-repeat 0 0; }
-	  		}
+			h1 {
+		  	  	a {
+		  	  		width: 300px;
+		  		  	height: 70px;
+		  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
+		  		  	&:hover {
+		  		    	background: url('../images/mnemosyne-phonetics-logo-300.png') no-repeat 0 0; }
+		  		}
+		  	}
 	  	}
 	}
 	.featured-content-first { clear: both; }
