add background color to search box popup for small browser sizes
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@971 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6462,7 +6462,11 @@ p.caption {
       background: url("../images/mnemosyne-phonetics-logo-300.png") no-repeat 0 0; }
 
   .featured-content-first {
-    clear: both; } }
+    clear: both; }
+
+  #search-panels {
+    background: #a6a6a8;
+    padding-right: 20px; } }
 @media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 10%; } }
