--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -18,6 +18,9 @@
 	  	}
 	}
 	.featured-content-first { clear: both; }
-
+	#search-panels {
+		background: $grayLight;
+		padding-right: 20px;
+	}
 }
 
