--- a/css/content.css
+++ b/css/content.css
@@ -6466,7 +6466,10 @@ p.caption {
 
   #search-panels {
     background: #a6a6a8;
-    padding-right: 20px; } }
+    padding-right: 20px; }
+
+  .institution-links {
+    width: 90%; } }
 @media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 10%; } }
