add color back to search results links
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@974 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6326,6 +6326,11 @@ p.caption {
   font-size: 1.625em;
   padding: 8px 13px; }
 
+.main-content .search-results h3 a {
+  color: #a7c03a; }
+.main-content .search-results h3 a:hover {
+  color: #005580; }
+
 /* Other buttons, such as book purchase */
 /*---------------------------------------*/
 .btn-standard {
