--- a/css/content.css
+++ b/css/content.css
@@ -6457,14 +6457,21 @@ p.caption {
   .sidebar h3 {
     clear: both; } }
 @media (max-width: 480px) {
-  .navbar .brand {
-    margin-left: -15px; }
-  .navbar .logo h1 a {
-    width: 300px;
-    height: 70px;
-    background: url("../images/mnemosyne-logo-300.png") no-repeat 0 0; }
-    .navbar .logo h1 a:hover {
-      background: url("../images/mnemosyne-phonetics-logo-300.png") no-repeat 0 0; }
+  .navbar {
+    margin-top: 0; }
+    .navbar .brand {
+      margin-left: -15px; }
+    .navbar .logo h1 a {
+      width: 300px;
+      height: 70px;
+      background: url("../images/mnemosyne-logo-300.png") no-repeat 0 0;
+      display: inline-block;
+      font-size: 1em;
+      margin-bottom: 2px; }
+      .navbar .logo h1 a:hover {
+        background: url("../images/mnemosyne-phonetics-logo-300.png") no-repeat 0 0; }
+    .navbar ul.menu {
+      margin-left: 0; }
 
   .featured-content-first {
     clear: both; }
