--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -4,6 +4,7 @@
 
 @media (max-width: 480px) {
 	.navbar {
+		margin-top: 0;
 		.brand { margin-left: -15px; }
 		.logo {
 			h1 {
@@ -11,11 +12,15 @@
 		  	  		width: 300px;
 		  		  	height: 70px;
 		  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
+		  		  	display: inline-block;
+		  		  	font-size: 1em;
+		  		  	margin-bottom: 2px;
 		  		  	&:hover {
 		  		    	background: url('../images/mnemosyne-phonetics-logo-300.png') no-repeat 0 0; }
 		  		}
 		  	}
 	  	}
+	  	ul.menu { margin-left: 0; }
 	}
 	.featured-content-first { clear: both; }
 	#search-panels {
