--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -12,15 +12,18 @@
 		  	  		width: 300px;
 		  		  	height: 70px;
 		  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
-		  		  	display: inline-block;
-		  		  	font-size: 1em;
-		  		  	margin-bottom: 2px;
 		  		  	&:hover {
 		  		    	background: url('../images/mnemosyne-phonetics-logo-300.png') no-repeat 0 0; }
 		  		}
 		  	}
 	  	}
-	  	ul.menu { margin-left: 0; }
+	  	ul.menu { 
+	  		margin-left: 0;
+	  		a {	
+	  			display: inline-block;
+		  		font-size: 1em;
+		  		margin-bottom: 2px; }
+	  	}
 	}
 	.featured-content-first { clear: both; }
 	#search-panels {
