--- a/css/content/_responsive-480px-max.scss
+++ b/css/content/_responsive-480px-max.scss
@@ -21,10 +21,15 @@
 	  	.nav {
 	  		li {
 	  			a {	
-	  			display: inline-block;
-		  		font-size: 1em;
-		  		margin-bottom: 2px; }
+	  			border-left: 0;
+	  			padding: 2px 6px;
+		  		font-size: 1em; }
 	  		}
+	  		li.active-trail,
+			li.active {
+				a, 
+				a:hover { border-bottom: 0; }
+			}
 	  	}
 	}
 	.featured-content-first { clear: both; }
