make h2 smaller at 480px breakpoint
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@984 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -6487,7 +6487,10 @@ p.caption {
     padding-right: 20px; }
 
   .institution-links {
-    width: 90%; } }
+    width: 90%; }
+
+  h2 {
+    font-size: 2em; } }
 @media (min-width: 1372px) {
   .hero .home-content {
     padding-left: 15%; } }
