try fix for safari draggable bug
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@985 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5664,6 +5664,9 @@ body {
 .browse-themes .rs-carousel-runner {
   margin-left: 173px; }
 
+div.zoom-container div.zoom-holder img.zoom-thumb {
+  position: absolute !important; }
+
 @media only screen and (max-width: 62.5em) {
   #nav {
     width: 100%;
