--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -22,7 +22,7 @@ div.zoom-container div.zoom-holder {
 }
 div.zoom-container div.zoom-holder img.zoom-thumb {
     left: 0;
-    position: absolute;
+    position: absolute !important;
     top: 0;
     z-index: 0;
 }
@@ -58,7 +58,7 @@ div.zoom-container div.zoom-hotspots a {
 	/*width: 24px;*/
 	/*height: 24px;*/
 	margin: 0;
-	text-decoration: none;		
+	text-decoration: none;
 }
 
 div.zoom-container div.zoom-hotspots a .panel-number {
@@ -66,7 +66,7 @@ div.zoom-container div.zoom-hotspots a .panel-number {
 	background-color: #7A9945;
 	padding: 5px;
 	display: inline-block;
-	width: auto;	
+	width: auto;
 	font-size: 1.1em;
 	opacity: .8;
 	border: 1px solid #cfcfcf;
