increase line-height and add bottom margin to .main-content li mostly to make readings page easier to read
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@989 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/content.css
+++ b/css/content.css
@@ -5864,7 +5864,8 @@ h2 {
   line-height: 1.4em; }
 .main-content li {
   font-size: 1.4375em;
-  line-height: 1.2em; }
+  line-height: 1.4em;
+  margin-bottom: 5px; }
   .main-content li p {
     font-size: 1em; }
 .main-content h3 {
