--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -22,7 +22,7 @@ div.zoom-container div.zoom-holder {
 }
 div.zoom-container div.zoom-holder img.zoom-thumb {
     left: 0;
-    position: absolute !important;
+    position: absolute;
     top: 0;
     z-index: 0;
 }
