--- a/js/tilezoom/jquery.tilezoom.css
+++ b/js/tilezoom/jquery.tilezoom.css
@@ -25,6 +25,7 @@ div.zoom-container div.zoom-holder img.zoom-thumb {
     position: absolute;
     top: 0;
     z-index: 0;
+    display: block;
 }
 div.zoom-container div.zoom-tiles {
     left: 0;
