--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -125,9 +125,9 @@ p.caption {
   }
 }
 
-/* Panel list on themes page */
+/* Inline list of buttons */
 /*------------------------------*/  
-.panel-themes {
+.button-list {
   list-style: none;
   margin-left: 0;
   overflow: hidden;
