add formatting for readings link on panels page
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1074 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*
+/*!
  * Bootstrap v2.3.1
  *
  * Copyright 2012 Twitter, Inc
@@ -5397,6 +5397,9 @@ body {
         background: #1faac0;
         color: white;
         text-decoration: none; }
+  .panels-display .btn-standard {
+    margin-left: 20px;
+    text-decoration: none; }
   .panels-display nav {
     position: absolute;
     top: 0;
