--- a/css/panels.css
+++ b/css/panels.css
@@ -4990,6 +4990,9 @@ body {
       height: 45px;
       line-height: 45px;
       background-color: #4d4e53; }
+    .page.panels header #nav > ul > li.last > a {
+      color: #999;
+      font-size: 75%; }
     .page.panels header #nav > ul > li > a {
       height: 100%;
       text-align: center;
