--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -101,6 +101,11 @@ body {
 
 						}
 						
+							#nav > ul > li.last > a {
+								color: #999;
+								font-size: 75%;
+							}
+
 
 							#nav > ul > li > a
 							{
