format help link in panels interface
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1076 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -103,7 +103,7 @@ body {
 						
 							#nav > ul > li.last > a {
 								color: #999;
-								font-size: 75%;
+								font-size: 1em;
 							}
 
 
