--- a/css/panels.css
+++ b/css/panels.css
@@ -4992,7 +4992,7 @@ body {
       background-color: #4d4e53; }
     .page.panels header #nav > ul > li.last > a {
       color: #999;
-      font-size: 75%; }
+      font-size: 1em; }
     .page.panels header #nav > ul > li > a {
       height: 100%;
       text-align: center;
