--- a/css/content.css
+++ b/css/content.css
@@ -5993,6 +5993,13 @@ img.pull-right {
 .sidebar ul.menu {
   margin-left: 5px; }
 
+.ie8 .navbar .logo h1 a {
+  width: 300px;
+  height: 70px;
+  background: url("../images/mnemosyne-logo-300.png") no-repeat 0 0; }
+  .ie8 .navbar .logo h1 a:hover {
+    background: url("../images/mnemosyne-phonetics-logo-300.png") no-repeat 0 0; }
+
 /* Institution branding */
 /*------------------------------*/
 .institution-brand {
