--- a/css/content/_navigation.scss
+++ b/css/content/_navigation.scss
@@ -88,3 +88,21 @@
 //.phonetic {
   //background: url('../images/mnemosyne-phonetics-logo.png') no-repeat 0 0 !important; 
 //}
+
+
+// IE8 logo - background image gets cut off
+.ie8 {
+	.navbar {
+		.logo {
+			h1 {
+		  	  	a {
+		  	  		width: 300px;
+		  		  	height: 70px;
+		  		  	background: url('../images/mnemosyne-logo-300.png') no-repeat 0 0;
+		  		  	&:hover {
+		  		    	background: url('../images/mnemosyne-phonetics-logo-300.png') no-repeat 0 0; }
+		  		}
+		  	}
+	  	}
+	}
+}
