text fix for firefox carousel rendering issue
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1082 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5137,7 +5137,8 @@ body {
   margin-left: 0;
   margin-right: 0; }
   .rs-carousel ul li {
-    margin-right: 0; }
+    margin-right: 0;
+    width: auto; }
     .rs-carousel ul li .panel-item a {
       position: relative;
       display: inline-block;
