--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -405,6 +405,8 @@ body {
 
 
 .rs-carousel {
+
+	width: 100%;
 	
 	ul {
 		
@@ -418,8 +420,7 @@ body {
 
 			//margin-right: 25px;
 			margin-right: 0;
-			width: auto;
-			
+
 			&:first-child {
 				//margin-left: 75px;
 				//margin-left: 0;
