text fix for firefox carousel rendering issue
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1085 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -405,8 +405,6 @@ body {
 
 
 .rs-carousel {
-
-	width: 100%;
 	
 	ul {
 		
@@ -420,6 +418,7 @@ body {
 
 			//margin-right: 25px;
 			margin-right: 0;
+			display: inline;
 
 			&:first-child {
 				//margin-left: 75px;
