--- a/css/panels.css
+++ b/css/panels.css
@@ -5671,6 +5671,10 @@ body {
 .browse-themes .rs-carousel-runner {
   margin-left: 173px; }
 
+@-moz-document url-prefix() {
+  .rs-carousel-runner {
+    width: 1720px; } }
+
 @media only screen and (max-width: 62.5em) {
   #nav {
     width: 100%;
