text fix for firefox carousel rendering issue
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1087 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5673,7 +5673,7 @@ body {
 
 @-moz-document url-prefix() {
   .rs-carousel-runner {
-    width: 1720px; } }
+    width: 1720px !important; } }
 
 @media only screen and (max-width: 62.5em) {
   #nav {
