reverting all changes
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1088 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5137,8 +5137,7 @@ body {
   margin-left: 0;
   margin-right: 0; }
   .rs-carousel ul li {
-    margin-right: 0;
-    display: inline; }
+    margin-right: 0; }
     .rs-carousel ul li .panel-item a {
       position: relative;
       display: inline-block;
@@ -5670,10 +5669,6 @@ body {
   width: 138px; }
 .browse-themes .rs-carousel-runner {
   margin-left: 173px; }
-
-@-moz-document url-prefix() {
-  .rs-carousel-runner {
-    width: 1720px !important; } }
 
 @media only screen and (max-width: 62.5em) {
   #nav {
