testing setting width for mozilla only on rs-carousel-runner
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1089 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5670,6 +5670,10 @@ body {
 .browse-themes .rs-carousel-runner {
   margin-left: 173px; }
 
+@-moz-document url-prefix() {
+  .rs-carousel-runner {
+    width: 1720px !important; } }
+
 @media only screen and (max-width: 62.5em) {
   #nav {
     width: 100%;
