--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -1049,6 +1049,10 @@ body {
   }
 }
 
+@-moz-document url-prefix() {
+    .rs-carousel-runner { width: 1720px !important; }
+}
+
 
 
 @media only screen and ( max-width: 62.5em ) /* 1000 */
