--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Abel);
 /*!
  * Bootstrap v2.3.1
  *
@@ -8,6 +7,7 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+@import url(//fonts.googleapis.com/css?family=Abel);
 article,
 aside,
 details,
@@ -6356,7 +6356,9 @@ p.caption {
 /* Contributors page */
 /*------------------------------*/
 .contributor {
-  clear: both; }
+  clear: both;
+  border-bottom: 1px solid #a6a6a8;
+  padding-top: 20px; }
 
 .contributor-photo {
   width: 20%;
