--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -102,7 +102,7 @@ p.caption {
 .contributor { 
   clear: both;
   border-bottom: 1px solid $grayLight;
-  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .contributor-photo { 
   width: 20%;
