--- a/css/content.css
+++ b/css/content.css
@@ -6357,8 +6357,11 @@ p.caption {
 /*------------------------------*/
 .contributor {
   clear: both;
-  border-bottom: 1px solid #a6a6a8;
-  padding-bottom: 20px; }
+  border-top: 1px solid #a6a6a8;
+  padding-top: 20px; }
+
+.contributor:first-child {
+  border-top: 0; }
 
 .contributor-photo {
   width: 20%;
