--- a/css/content/_miscellaneous.scss
+++ b/css/content/_miscellaneous.scss
@@ -101,8 +101,11 @@ p.caption {
 
 .contributor { 
   clear: both;
-  border-bottom: 1px solid $grayLight;
-  padding-bottom: 20px;
+  border-top: 1px solid $grayLight;
+  padding-top: 20px;
+}
+.contributor:first-child {
+  border-top: 0;
 }
 .contributor-photo { 
   width: 20%;
