--- a/css/content.css
+++ b/css/content.css
@@ -6356,11 +6356,12 @@ p.caption {
 /* Contributors page */
 /*------------------------------*/
 .contributor {
-  clear: both;
+  clear: both; }
+
+.view-scholars .views-row {
   border-top: 1px solid #a6a6a8;
   padding-top: 20px; }
-
-.contributor:first-child {
+.view-scholars .views-row:first-child {
   border-top: 0; }
 
 .contributor-photo {
