--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -981,6 +981,7 @@ body {
 .panels-display {
 	.panel-description {
 		.additional-images {
+			margin-bottom: 20px;
 			.addl-img-modal {
 				-webkit-border-radius: 0;
 				-moz-border-radius: 0;
