tighten up space between paragraphs in panel descriptions
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@1133 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels.css
+++ b/css/panels.css
@@ -5321,7 +5321,7 @@ body {
     .panels-display .panel-description p {
       font-weight: normal;
       font-size: 18px;
-      padding: 20px;
+      padding: 20px 20px 0 20px;
       line-height: 1.2em; }
       .panels-display .panel-description p a {
         display: inline-block;
