--- a/css/panels/_layout.scss
+++ b/css/panels/_layout.scss
@@ -659,7 +659,7 @@ body {
 		p {
 			font-weight: normal;
 			font-size: 18px;
-			padding: 20px;
+			padding: 20px 20px 0 20px;
 			line-height: 1.2em;
 			
 			a {
