--- a/css/content.css
+++ b/css/content.css
@@ -161,7 +161,6 @@ textarea {
 
   @page {
     margin: 0.5cm; }
-
   p,
   h2,
   h3 {
@@ -4476,35 +4475,30 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 
   to {
     background-position: 0 0; } }
-
 @-moz-keyframes progress-bar-stripes {
   from {
     background-position: 40px 0; }
 
   to {
     background-position: 0 0; } }
-
 @-ms-keyframes progress-bar-stripes {
   from {
     background-position: 40px 0; }
 
   to {
     background-position: 0 0; } }
-
 @-o-keyframes progress-bar-stripes {
   from {
     background-position: 0 0; }
 
   to {
     background-position: 40px 0; } }
-
 @keyframes progress-bar-stripes {
   from {
     background-position: 40px 0; }
 
   to {
     background-position: 0 0; } }
-
 .progress {
   overflow: hidden;
   height: 20px;
@@ -4856,7 +4850,6 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
  */
 @-ms-viewport {
   width: device-width; }
-
 .hidden {
   display: none;
   visibility: hidden; }
@@ -5822,14 +5815,12 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
   src: url("../font/Walkway_SemiBold-webfont.eot?#iefix") format("embedded-opentype"), url("../font/Walkway_SemiBold-webfont.woff") format("woff"), url("../font/Walkway_SemiBold-webfont.ttf") format("truetype"), url("../font/Walkway_SemiBold-webfont.svg#WalkwaySemiBoldRegular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 @font-face {
   font-family: 'WalkwayBoldRegular';
   src: url("../font/Walkway_Bold-webfont.eot");
   src: url("../font/Walkway_Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../font/Walkway_Bold-webfont.woff") format("woff"), url("../font/Walkway_Bold-webfont.ttf") format("truetype"), url("../font/Walkway_Bold-webfont.svg#WalkwayBoldRegular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 body {
   font-size: 100%;
   font-family: Abel;
@@ -6240,6 +6231,22 @@ a.signale {
 
 .video-player {
   margin-bottom: 30px; }
+
+/* Warburg Institute */
+/*------------------------------*/
+.warburg-institute h3 {
+  margin-bottom: .5em; }
+.warburg-institute h4 {
+  text-transform: uppercase;
+  font-size: 1.5em; }
+.warburg-institute img {
+  margin-bottom: 15px; }
+
+/* Companion Volumen */
+/*------------------------------*/
+.volumen {
+  font-size: 1.5em;
+  font-height: 1.2em; }
 
 /* Warburg Institute */
 /*------------------------------*/
