--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -62,6 +62,7 @@
 .book-cover {
 	margin-top: 22px;
 }
+
 a.signale {
 	display: block;
 	font-size: 1.3em;
@@ -106,6 +107,20 @@ a.signale {
 /*------------------------------*/
 .media { background: url("../images/hr-vert.png") no-repeat right top; }
 .video-player { margin-bottom: 30px; }
+
+/* Warburg Institute */
+/*------------------------------*/
+.warburg-institute {
+	h3 { margin-bottom: .5em; }
+	h4 { 
+		text-transform: uppercase;
+		font-size: 1.5em; }
+	img { margin-bottom: 15px; }
+}
+
+/* Companion Volumen */
+/*------------------------------*/
+.volumen { font-size: 1.5em; font-height: 1.2em; }
 
 /* Warburg Institute */
 /*------------------------------*/
