--- a/css/content.css
+++ b/css/content.css
@@ -6244,9 +6244,11 @@ a.signale {
 
 /* Companion Volumen */
 /*------------------------------*/
-.volumen {
+a.volumen {
   font-size: 1.5em;
-  font-height: 1.2em; }
+  font-height: 1.2em;
+  display: inline-block;
+  padding-bottom: 10px; }
 
 /* Warburg Institute */
 /*------------------------------*/
