--- a/css/content.css
+++ b/css/content.css
@@ -6245,10 +6245,11 @@ a.signale {
 /* Companion Volumen */
 /*------------------------------*/
 a.volumen {
-  font-size: 1.5em;
-  font-height: 1.2em;
   display: inline-block;
-  padding-bottom: 10px; }
+  font-size: 1.3em;
+  line-height: 1.2em;
+  padding-bottom: 10px;
+  width: 75%; }
 
 /* Warburg Institute */
 /*------------------------------*/
