--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -120,10 +120,11 @@ a.signale {
 
 /* Companion Volumen */
 /*------------------------------*/
-a.volumen { font-size: 1.5em; 
-			font-height: 1.2em; 
-			display: inline-block;
-			padding-bottom: 10px;
+a.volumen {  display: inline-block;
+    		font-size: 1.3em;
+		    line-height: 1.2em;
+		    padding-bottom: 10px;
+		    width: 75%;
 }
 
 /* Warburg Institute */
