--- a/css/content.css
+++ b/css/content.css
@@ -6532,7 +6532,9 @@ p.caption {
     font-size: 2em; } }
 @media (min-width: 1372px) {
   .hero .home-content {
-    padding-left: 15%; } }
+    padding-left: 15%; }
+    .hero .home-content p {
+      font-size: 2em; } }
 @media (max-width: 1292px) {
   .hero .home-content h2 {
     font-size: 2em; } }
