--- a/css/content/_responsive-hero.scss
+++ b/css/content/_responsive-hero.scss
@@ -1,6 +1,12 @@
 @media (min-width: 1372px) {
 	.hero {
-		.home-content { padding-left: 15%; }
+		.home-content { 
+			padding-left: 15%; 
+
+			p {
+				font-size: 2em;
+			}
+		}
 	}
 }
 
