--- a/css/content.css
+++ b/css/content.css
@@ -6128,9 +6128,9 @@ footer {
 /*------------------------------*/
 .hero {
   width: 100%;
-  height: 543px;
-  background: url("../images/panel.jpg") no-repeat scroll top left;
-  background-position: center 14px; }
+  height: 520px;
+  background: #486570 url("../images/panel.jpg") no-repeat scroll top left;
+  background-position: center 0; }
   .hero .home-content {
     float: left;
     padding-left: 7%;
