--- a/css/content/_home.scss
+++ b/css/content/_home.scss
@@ -3,9 +3,9 @@
 
 .hero {
 	width: 100%;
-	height: 543px;
-	background: url("../images/panel.jpg") no-repeat scroll top left;
-	background-position: center 14px;
+	height: 520px;
+	background: #486570 url("../images/panel.jpg") no-repeat scroll top left;
+	background-position: center 0;
 
 	.home-content {
 		float: left;
