--- a/css/content.css
+++ b/css/content.css
@@ -6129,7 +6129,7 @@ footer {
 .hero {
   width: 100%;
   height: 520px;
-  background: #486570 url("../images/panel.jpg") no-repeat scroll top left;
+  background: #2b2d2f url("../images/panel.jpg") no-repeat scroll top left;
   background-position: center 0; }
   .hero .home-content {
     float: left;
