--- a/css/content.css
+++ b/css/content.css
@@ -6130,7 +6130,11 @@ footer {
   width: 100%;
   height: 520px;
   background: #2b2d2f url("../images/panel.jpg") no-repeat scroll top left;
-  background-position: center 0; }
+  background-position: center 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
   .hero .home-content {
     float: left;
     padding-left: 7%;
